# saucybot-discord

./: .dockerignore  .editorconfig  .env.example  .eslintignore  .eslintrc.json  .gitignore  .prettierrc  .python-version  Dockerfile  LICENSE  README.md  SaucyBot.sln  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  global.json  nodemon.json  package-lock.json  package.json  pyproject.toml  saucebot-discord.py3  tsconfig.json  ugoira.webm
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  site-request.md
.github/workflows/: continuous-deployment.yml  continuous-integration.yml  main.yml
SaucyBot/: .dockerignore  .editorconfig  .env.example  Dockerfile  Program.cs  SaucyBot.csproj  Worker.cs  appsettings.Development.json.example  appsettings.json.example  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  packages.lock.json
SaucyBot.Tests/: SaucyBot.Tests.csproj  UnitTest1.cs  packages.lock.json
SaucyBot/Common/: Helper.cs  Helpers.cs  PlainTextMarkupFormatter.cs
SaucyBot/Database/: DatabaseContext.cs  MySqlDatabaseContext.cs  SqliteDatabaseContext.cs
SaucyBot/Extensions/: HttpClientExtensions.cs  ListExtensions.cs  StringExtensions.cs
SaucyBot/Properties/: launchSettings.json
SaucyBot/Services/: CacheManager.cs  DatabaseManager.cs  GuildConfigurationManager.cs  ICacheManager.cs  (+3 more)
saucybot/: __init__.old.py  __init__.py  site_runner.py
src/: CacheManager.ts  Constants.ts  Environment.ts  Helpers.ts  Logger.ts  MessageSender.ts  RunnerResponse.ts  SiteRunner.ts  bot.ts  index.ts
tests/: test_saucybot.py
(+63 files in other folders)
